# Robotic_comprehension_of_viscocity

./: CMakeLists.txt  README.md  behavior_1.cpp  behavior_2.cpp  behavior_3.cpp  cartesian_workout.py  errors.txt  package.xml
data/: toolspace_position_db.txt  up_down_pose.txt
src/: .comments.txt.swp  behavior.cpp  behavior_1.cpp  behavior_2.cpp  start_pose.txt
src/viscosity_data/: back_and_forth_hard_plastic_stir_air_efforts_trial_1_run_1.csv  back_and_forth_hard_plastic_stir_air_efforts_trial_1_run_2.csv  back_and_forth_hard_plastic_stir_air_efforts_trial_1_run_3.csv  back_and_forth_hard_plastic_stir_air_efforts_trial_1_run_4.csv  back_and_forth_hard_plastic_stir_air_joint_state_trial_1_run_1.csv  back_and_forth_hard_plastic_stir_air_joint_state_trial_1_run_2.csv  back_and_forth_hard_plastic_stir_air_joint_state_trial_1_run_3.csv  back_and_forth_hard_plastic_stir_air_joint_state_trial_1_run_4.csv  back_and_forth_hard_plastic_stir_air_pose_stamped_trial_1_run_1.csv  back_and_forth_hard_plastic_stir_air_pose_stamped_trial_1_run_2.csv  back_and_forth_hard_plastic_stir_air_pose_stamped_trial_1_run_3.csv  back_and_forth_hard_plastic_stir_air_pose_stamped_trial_1_run_4.csv  back_and_forth_hard_plastic_stir_air_wrench_stamped_trial_1_run_1.csv  back_and_forth_hard_plastic_stir_air_wrench_stamped_trial_1_run_2.csv  back_and_forth_hard_plastic_stir_air_wrench_stamped_trial_1_run_3.csv  back_and_forth_hard_plastic_stir_air_wrench_stamped_trial_1_run_4.csv  back_and_forth_hard_plastic_stir_beans_efforts_trial_1_run_1.csv  back_and_forth_hard_plastic_stir_beans_efforts_trial_1_run_2.csv  (+750 more)
